tests/ui/consts/const-blocks/trait-error.stderr
error[E0277]: the trait bound `String: Copy` is not satisfied
  --> $DIR/trait-error.rs:5:6
   |
LL |     [Foo(String::new()); 4];
   |      ^^^^^^^^^^^^^^^^^^
   |      |
   |      the trait `Copy` is not implemented for `String`
   |      help: create an inline `const` block: `const { Foo(String::new()) }`
   |
note: required for `Foo<String>` to implement `Copy`
  --> $DIR/trait-error.rs:1:10
   |
LL | #[derive(Copy, Clone)]
   |          ^^^^ unsatisfied trait bound introduced in this `derive` macro
   = note: the `Copy` trait is required because this value will be copied for each element of the array

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
